<resources>
    <string name="app_name">Android-Lifecycles</string>
    <string name="next_activity">Next Activity</string>
    <string name="main_activity">Main Activity</string>
    <string name="second_activity">Second Activity</string>
    <string name="transparent_activity">Transparent Activity</string>
    <string name="fragment_activity">Fragment Activity</string>
    <string name="fragment_host_activity">Fragment Host Activity</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="replace_next_fragment">Replace Next Fragment</string>
    <string name="add_next_fragment">Add Next Fragment</string>
    <string name="fragment_2">Fragment 2</string>
    <string name="prev_fragment">Prev Fragment</string>
    <string name="remove_fragment">Remove fragment</string>
    <string name="add_fragment">Add fragment</string>
    <string name="text">text</string>
    <string name="manual_config_change_activity">Manual Config Change Activity</string>
    <string name="landscape_mode">Landscape mode, Please check the lifecycle methods logs</string>
    <string name="portrait_mode">Portrait mode, Please check the lifecycle methods logs</string>
    <string name="config_change_activity">Config Change Activity</string>
    <string name="alert_title">Alert Dialog Title</string>
    <string name="alert_dialog_message">Alert Dialog Message</string>
    <string name="setting">Setting</string>
    <string name="ok">Ok</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_fragment">Dialog Fragment</string>
    <string name="open_system_dialog_1">Open System Dialog 1</string>
    <string name="open_system_dialog_2">Open System Dialog 2</string>
    <string name="image">Image</string>
</resources>