<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:fillViewport="true"
    android:paddingLeft="16dp"
    android:paddingTop="24dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:paddingBottom="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            style="@style/TextViewScreenName"
            android:text="@string/main_activity"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startNextActivity"
            android:text="@string/next_activity"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnFragmentActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFragmentHostActivity"
            android:text="@string/fragment_activity"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnConfigChangeActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startConfigChangeActivity"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/config_change_activity"
            />

        <Button
            android:id="@+id/btnManualConfigChangeActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startManualConfigChangeActivity"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/manual_config_change_activity"
            />

        <Button
            android:id="@+id/btnAlertDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showAlertDialog"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/alert_dialog"
            />

        <Button
            android:id="@+id/btnDialogFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showDialogFragment"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/dialog_fragment"
            />

        <Button
            android:id="@+id/btnSystemDialog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showSystemDialog1"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/open_system_dialog_1"
            />

        <Button
            android:id="@+id/btnSystemDialog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="showSystemDialog2"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/open_system_dialog_2"
            />

    </LinearLayout>
</ScrollView>
