<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingStart="24dp"
    android:paddingEnd="16dp"
    android:paddingBottom="8dp"
    >


    <TextView
        android:layout_marginEnd="24dp"
        android:id="@+id/textview_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:text="Title" />

    <TextView
        android:layout_marginEnd="24dp"
        android:id="@+id/textview_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textview_Title"
        android:layout_marginTop="16dp"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textColor="@color/black"
        tools:text="Description" />



    <LinearLayout
        android:id="@+id/button_layout"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <Space
            android:id="@+id/spacer"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/button_cancel"
            style="?android:attr/buttonBarNegativeButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/red" />

        <Button
            android:id="@+id/button_ok"
            style="?android:attr/buttonBarPositiveButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:textColor="@color/button_secondary" />
    </LinearLayout>


    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:src="@mipmap/ic_launcher_round"
        android:layout_below="@+id/textview_description"
        android:layout_above="@+id/button_layout"
        />

</RelativeLayout>
